# Capsule-Agent-Tool-Runner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development_plan.md  index.html  requirements.md  threat_model.md
docs/archive/v0.1/: implementation_plan.md
docs/dev/: CHECKPOINT-pack-system.md
docs/planning/: checkpoint-agent-loop.md  v0.2-build-plan.md
examples/: agent-policy.yaml
examples/plans/: copy_file.yaml  create_notes.yaml  demo_all_tools.yaml  denied_access.yaml  fetch_api.yaml  git_status.yaml  multi_step.yaml  network_fetch.yaml  read_project_files.yaml  simple_read.yaml  system_info.yaml  write_report.yaml
examples/policies/: api_access.yaml  demo_all.yaml  development.yaml  git_workflow.yaml  permissive.yaml  strict.yaml  system_info.yaml  workspace.yaml
examples/workspace/: note_1.txt  note_2.txt  note_3.txt
packs/local_doc_auditor/: manifest.yaml  policy.yaml
packs/local_doc_auditor/evals/: test_cases.yaml
packs/local_doc_auditor/prompts/: system.txt
packs/repo_analyst/: manifest.yaml  policy.yaml
packs/repo_analyst/evals/: test_cases.yaml
packs/repo_analyst/plans/: default.yaml
packs/repo_analyst/prompts/: system.txt
src/capsule/: __init__.py  __main__.py  cli.py  engine.py  errors.py  schema.py
src/capsule/agent/: __init__.py  loop.py  validation.py
src/capsule/pack/: __init__.py  loader.py  manifest.py
src/capsule/planner/: __init__.py  base.py  json_repair.py  ollama.py
src/capsule/policy/: __init__.py  engine.py
src/capsule/replay/: __init__.py  engine.py
src/capsule/report/: __init__.py  console.py  json.py
src/capsule/store/: __init__.py  db.py
src/capsule/tools/: __init__.py  base.py  fs.py  http.py  registry.py  shell.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_integration.py  test_engine.py  test_pack_integration.py  test_replay.py  test_report.py
tests/security/: test_http_security.py  test_path_traversal.py  test_shell_security.py
tests/unit/: test_agent_loop.py  test_agent_validation.py  test_errors.py  test_pack_loader.py  test_pack_manifest.py  test_planner_base.py  test_planner_json_repair.py  test_planner_ollama.py  test_policy.py  test_schema.py  test_store.py  test_tools_base.py  test_tools_fs.py  test_tools_http.py  test_tools_shell.py
